@@ -24,6 +24,12 @@ Run rewritten API:
 clojure -M -m agent.core serve
 ```
 
+Run rewritten API without SQLite native-access warning:
+
+```bash
+clojure -J--enable-native-access=ALL-UNNAMED -M -m agent.core serve
+```
+
 Run rewritten tests:
 
 ```bash
@@ -40,5 +46,24 @@ Notes:
 
 - OpenRouter + Ollama are first-class providers in rewritten path.
 - SQLite session/message/completion persistence is in rewritten path.
+- Default logs go to `logs/clj-agent.log`.
+- Logging env vars:
+  - `AGENT_LOG_FILE`
+  - `AGENT_LOG_ENABLED`
+- API env vars:
+  - `AGENT_API_HOST`
+  - `AGENT_API_PORT`
+- SQLite env var:
+  - `AGENT_SQLITE_PATH`
 - SSE chat streaming is available on rewritten `/v1/chat/completions` with `{\"stream\": true}`.
 - `API.md`, `USAGE.md`, `PROJECT_SUMMARY.md` describe archived legacy system unless rewritten later.
+
+Java warning note:
+
+- `sqlite-jdbc` loads native code.
+- On newer Java, run with `--enable-native-access=ALL-UNNAMED`.
+- Alternative:
+
+```bash
+export JAVA_TOOL_OPTIONS=--enable-native-access=ALL-UNNAMED
+```
